bubba-frontend (1.2.4.69) estelle claire; urgency=low

  * Change variable name "top" to "o_top". (Closes: #1039) 

 -- Carl Fürstenberg <carl@excito.com>  Sat, 06 Feb 2010 20:00:21 +0100

bubba-frontend (1.2.4.68) estelle claire; urgency=low

  [ PA Nilsson ]
  * Fixed wizard profiles. (Closes: #1152)

 -- Carl Fürstenberg <carl@excito.com>  Sat, 06 Feb 2010 19:25:48 +0100

bubba-frontend (1.2.4.67) estelle; urgency=low

  * updating jquery.event.drag and jquery.event.drop (Closes: #1039) 

 -- Carl Fürstenberg <carl@excito.com>  Sat, 06 Feb 2010 17:37:54 +0100

bubba-frontend (1.2.4.66) estelle claire; urgency=low

  * adding link debug option 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 03 Feb 2010 14:31:09 +0100

bubba-frontend (1.2.4.65) claire estelle; urgency=low

  * Updated profile texts.
  * Fixed dual restart of dnsmasq, closes#1077
  * Restarting samba when workgroup updated. 

 -- PA Nilsson <pa@excito.com>  Thu, 04 Feb 2010 15:31:22 +0100

bubba-frontend (1.2.4.64) claire estelle; urgency=low

  * Fixed PHP error when using static IP config on WAN interface. Closes #1092.

 -- PA Nilsson <pa@excito.com>  Wed, 03 Feb 2010 16:03:19 +0100

bubba-frontend (1.2.4.63) karmic; urgency=low

  * Fixed "close" buttons in dialogs again. 

 -- PA Nilsson <pa@excito.com>  Wed, 03 Feb 2010 14:19:16 +0100

bubba-frontend (1.2.4.62) claire estelle; urgency=low

  * Fixed "close" buttons in dialogs.

 -- PA Nilsson <pa@excito.com>  Wed, 03 Feb 2010 12:28:52 +0100

bubba-frontend (1.2.4.61) claire estelle; urgency=low

  * Fix gateway parameter in set_static. Closes #1124

 -- Tor Krill <tor@excito.com>  Wed, 03 Feb 2010 12:00:00 +0100

bubba-frontend (1.2.4.60) claire estelle; urgency=low

  * Fixed incorrect profile update from WAN page.

 -- PA Nilsson <pa@excito.com>  Wed, 03 Feb 2010 10:30:34 +0100

bubba-frontend (1.2.4.59) karmic; urgency=low

  * Fixed red status bar, closes #1118 

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 23:40:11 +0100
